--- a/GOals/Base.lproj/Main.storyboard
+++ b/GOals/Base.lproj/Main.storyboard
@@ -90,52 +90,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="tableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="56" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kP4-MI-uwt">
-                                <rect key="frame" x="16" y="20" width="343" height="590"/>
+                                <rect key="frame" x="16" y="107" width="343" height="503"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <button key="tableHeaderView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="QyF-zU-dIH">
+                                    <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="+"/>
+                                    <connections>
+                                        <action selector="addGoalDidTouch:" destination="Vgc-Ua-vtC" eventType="touchUpInside" id="Rdt-nb-KSf"/>
+                                    </connections>
+                                </button>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewGroup" id="Ywa-jN-KR2" userLabel="NewGroup" customClass="GroupCell" customModule="GOals" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="56"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ywa-jN-KR2" id="XW8-sH-RBd">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="55"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New Group" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eeX-gx-Dmn">
-                                                    <rect key="frame" x="63" y="8" width="217" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <nil key="textColor"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bqj-YJ-DVj">
-                                                    <rect key="frame" x="0.0" y="11" width="48" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" title="Logout"/>
-                                                    <connections>
-                                                        <action selector="LogoutDidTouch:" destination="Vgc-Ua-vtC" eventType="touchUpInside" id="edi-0e-SNP"/>
-                                                        <segue destination="BYZ-38-t0r" kind="show" id="O5M-fO-ClC"/>
-                                                    </connections>
-                                                </button>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QyF-zU-dIH">
-                                                    <rect key="frame" x="305" y="8" width="30" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" title="Add"/>
-                                                    <connections>
-                                                        <action selector="createGroup:" destination="Vgc-Ua-vtC" eventType="touchUpInside" id="F88-fU-Rj1"/>
-                                                        <segue destination="BYZ-38-t0r" kind="show" id="UaX-fw-xzj"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <connections>
-                                            <outlet property="createChannelButton" destination="QyF-zU-dIH" id="7qa-yc-Zzc"/>
-                                            <outlet property="newChannelNameField" destination="eeX-gx-Dmn" id="Bsc-uQ-0bO"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExistingGroup" textLabel="EEr-u1-A3t" rowHeight="56" style="IBUITableViewCellStyleDefault" id="drw-sh-dWh">
-                                        <rect key="frame" x="0.0" y="84" width="343" height="56"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="cell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExistingGroup" textLabel="EEr-u1-A3t" rowHeight="56" style="IBUITableViewCellStyleDefault" id="drw-sh-dWh" userLabel="cell" customClass="GoalsCell" customModule="GOals" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="58" width="343" height="56"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="drw-sh-dWh" id="h5k-Sv-Qn3">
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="55"/>
@@ -158,23 +126,31 @@
                                     <outlet property="delegate" destination="Vgc-Ua-vtC" id="Q1N-EC-lFQ"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bqj-YJ-DVj">
+                                <rect key="frame" x="16" y="20" width="48" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Logout"/>
+                                <connections>
+                                    <action selector="LogoutDidTouch:" destination="Vgc-Ua-vtC" eventType="touchUpInside" id="edi-0e-SNP"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="O5M-fO-ClC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="A59-DO-pZV"/>
                     <connections>
-                        <outlet property="tableView" destination="kP4-MI-uwt" id="PLB-Ql-wlj"/>
-                        <segue destination="5Ar-zS-mQe" kind="show" identifier="showGoals" id="mou-Sp-Sc3"/>
+                        <outlet property="tableView" destination="kP4-MI-uwt" id="Qfh-mM-JuN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jPX-ee-9P7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-642.39999999999998" y="-376.46176911544228"/>
         </scene>
-        <!--Details Group View Controller-->
+        <!--View Controller-->
         <scene sceneID="bVb-7R-tdw">
             <objects>
-                <viewController id="5Ar-zS-mQe" customClass="DetailsGroupViewController" customModule="GOals" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="5Ar-zS-mQe" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="aXe-NL-yZO"/>
                         <viewControllerLayoutGuide type="bottom" id="4gw-wC-QIo"/>
@@ -239,9 +215,6 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <state key="normal" title="+"/>
-                                <connections>
-                                    <action selector="addGoal:" destination="5Ar-zS-mQe" eventType="touchUpInside" id="QRm-cJ-LBD"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lmh-MC-c9M">
                                 <rect key="frame" x="24" y="26" width="48" height="30"/>
@@ -463,7 +436,4 @@
         <image name="avatar-icon-1" width="128" height="128"/>
         <image name="goals logo no background" width="5692" height="3200"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="UaX-fw-xzj"/>
-    </inferredMetricsTieBreakers>
 </document>
