--- a/GOals/Base.lproj/LaunchScreen.storyboard
+++ b/GOals/Base.lproj/LaunchScreen.storyboard
@@ -20,6 +20,12 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="mountainbackgroundgoals" translatesAutoresizingMaskIntoConstraints="NO" id="6Zs-8M-kb4">
+                                <rect key="frame" x="-47" y="-22" width="469" height="710"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
@@ -28,4 +34,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="mountainbackgroundgoals" width="469" height="710"/>
+    </resources>
 </document>
